# Projets-42

./: Makefile  a.out  ft_atoi.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_lower.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memset.c  ft_strlcat.c  ft_strlcpy.c  ft_strnchr.c  ft_strncmp.c  ft_toupper.c  libft.h  strnstr.c
C/Codexion/: Makefile
C/Libft/: Makefile  ft_atoi.c  ft_isalnum.c  ft_split.c  (+15 more)
Codexion/: Makefile  README.md  a.out  codexion  test.c
Libft/: coucou.txt  ft_bzero.c  ft_calloc.c  ft_isalpha.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  libft.h
PUSH/: push_swap
Pipex/: Makefile
Push_swap/: Makefile  a.out  lst_utils.c  operation.c  parsing.c  push_swap.c  push_swap.h  stack.c
Python/Python8/ex1/: loading.py  pyproject.toml  requirements.txt
Python/a-maze-ing/: .gitignore  Makefile  README.md  a-maze-ing.py  a_maze_ing.py  config.txt  config_parse.py  main.py  maze_generator.py  mazegen-1.0.0-py3-none-any.whl  output_maze.py  pyproject.toml  solver.py
get_next_line/: a.out  get_next_line.c  get_next_line.h  get_next_line_utils.c  text.txt
libft/: a.out  ft_bzero.c  ft_strchr.c  ft_strlen.c  ft_strnstr.c  libft.h
push_swap/: Makefile  a.out  algo.c  algo2.c  algo3.c  lst_utils.c  main.c  operation1.c  operation2.c  operation3.c  parsing.c  push_swap  push_swap.c  push_swap.h  stack.c
so_long/: Makefile  so_long
(+279 files in other folders)
