[project]
name = "ex1"
version = "0.1.0"
description = ""
authors = [
    {name = "carl"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas (==2.3.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false